--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "main": "index.js",
   "license": "GPL-3.0",
   "dependencies": {
-    "puppeteer-core": "^10.2.0"
+    "@types/node": "16.6.1",
+    "esbuild-node-tsc": "1.6.1",
+    "puppeteer-core": "^10.2.0",
+    "puppeteer-extra": "3.1.18",
+    "puppeteer-extra-plugin-stealth": "2.7.8",
+    "typescript": "4.3.5"
   },
   "scripts": {
     "start": "node index.js"
